fix: fix trouble with Eloquent ORM and QueryBuilder (remove all ->get() methods and rename entity relationships);
